--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -1,13 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:orientation="vertical"
+			  android:paddingBottom="@dimen/activity_vertical_margin"
+			  android:paddingLeft="@dimen/activity_horizontal_margin"
+			  android:paddingRight="@dimen/activity_horizontal_margin"
+			  android:paddingTop="@dimen/activity_vertical_margin"
+			  android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/activity_add_book"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
+	<TextView
+			android:id="@+id/textView"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"
+			android:text="@string/activity_add_book"
+			android:layout_weight="0"/>
+
+	<TextView
+			android:id="@+id/text_add_Title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/EDTtitle"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_weight="0"/>
+
+	<EditText
+			android:id="@+id/editText_title"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:inputType="text"
+			android:layout_weight="0"/>
+
+	<TextView
+			android:id="@+id/text_author"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/EDTauthor"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_weight="0"/>
+
+	<EditText
+			android:id="@+id/editText_author"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:inputType="text"
+			android:layout_weight="0"/>
+
+	<Spinner
+			android:id="@+id/spinner_category"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"
+			android:spinnerMode="dropdown"
+			android:layout_weight="1"/>
+
+	<Button
+			android:id="@+id/BTconfirm"
+			android:layout_width="@dimen/BTwidth"
+			android:layout_height="@dimen/BTheight"
+			android:layout_gravity="center_horizontal"
+			android:text="@string/BTsave"
+			android:layout_weight="0"/>
+
+	Button
+			android:id="@+id/BThome"
+			android:layout_width="@dimen/BTwidth"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"
+			android:text="@string/home"
+			android:onClick="onClick_home"
+			android:layout_weight="0"
+			/>
+
 </LinearLayout>
