--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin">
 
     <TextView
         android:layout_width="wrap_content"
@@ -9,4 +12,26 @@
         android:text="@string/activity_new_list"
         android:id="@+id/textView3"
         android:layout_gravity="center_horizontal" />
+
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/EDTtitle_list"
+    android:id="@+id/textView4"
+    android:layout_gravity="left"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/EDTtitle_list"
+        android:layout_gravity="center_horizontal"
+        android:autoText="false"
+        android:inputType="text" />
+
+    <Button
+        android:layout_width="@dimen/BTwidth"
+        android:layout_height="@dimen/BTheight"
+        android:text="@string/BTsave"
+        android:id="@+id/BTsave"
+            />
 </LinearLayout>
