--- a/app/src/main/res/layout/activity_book_viewer.xml
+++ b/app/src/main/res/layout/activity_book_viewer.xml
@@ -21,4 +21,10 @@
 			android:layout_height="wrap_content"
 			android:layout_gravity="center_horizontal"
 			android:spinnerMode="dropdown"/>
+
+	<ListView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/book_list"/>
+
 </LinearLayout>
