--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -53,7 +53,7 @@
 			android:layout_height="wrap_content"
 			android:layout_gravity="center_horizontal"
 			android:spinnerMode="dropdown"
-			android:layout_weight="1"/>
+			android:layout_weight="0"/>
 
 	<Button
 			android:id="@+id/BTconfirm"
@@ -61,16 +61,7 @@
 			android:layout_height="@dimen/BTheight"
 			android:layout_gravity="center_horizontal"
 			android:text="@string/BTsave"
-			android:layout_weight="0"/>
-
-	Button
-			android:id="@+id/BThome"
-			android:layout_width="@dimen/BTwidth"
-			android:layout_height="wrap_content"
-			android:layout_gravity="center_horizontal"
-			android:text="@string/home"
-			android:onClick="onClick_home"
 			android:layout_weight="0"
-			/>
+			android:onClick="onClick_save"/>
 
 </LinearLayout>
