--- a/app/src/main/res/layout/activity_book_viewer.xml
+++ b/app/src/main/res/layout/activity_book_viewer.xml
@@ -23,7 +23,7 @@
 			android:spinnerMode="dropdown"/>
 
 	<ListView
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/book_list"/>
 
