--- a/app/src/main/res/layout/activity_book_viewer.xml
+++ b/app/src/main/res/layout/activity_book_viewer.xml
@@ -16,7 +16,7 @@
 			android:text="@string/activity_books_viewer"/>
 
 	<Spinner
-			android:id="@+id/spinner"
+			android:id="@+id/spinner_category_filter"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center_horizontal"
