--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,10 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
-				 android:id="@android:id/text1"
-				 android:layout_width="match_parent"
-				 android:layout_height="?android:attr/listPreferredItemHeightSmall"
-				 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-				 android:gravity="center_vertical"
-				 android:checkMark="?android:attr/listChoiceIndicatorSingle"/>
-				 <!--android:paddingStart="?android:attr/listPreferredItemPaddingStart"-->
-				 <!--android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" />-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:orientation="vertical"
+			  android:paddingBottom="@dimen/activity_vertical_margin"
+			  android:paddingLeft="@dimen/activity_horizontal_margin"
+			  android:paddingRight="@dimen/activity_horizontal_margin"
+			  android:paddingTop="@dimen/activity_vertical_margin">
+
+
+	<TextView
+			android:id="@+id/TextViewTitle"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:orientation="horizontal">
+
+		<TextView
+				android:id="@+id/TextViewAuthor"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+	</LinearLayout>
+
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:orientation="horizontal">
+
+		<TextView
+				android:id="@+id/TextView_is_read"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/is_read"
+				android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+		<CheckBox
+				android:id="@+id/CheckBox_is_read"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:checked="false"
+				android:clickable="false"
+				android:focusable="false"
+				android:focusableInTouchMode="false"/>
+	</LinearLayout>
+</LinearLayout>
